# IpStackGeolocation

./: .gitignore  CMakeLists.txt  QmlMap.qml  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Test/: CMakeLists.txt  tst_tests.cpp
Test/mocks/: MockDataStorage.h  MockGeolocationProvider.h  MockIPResolver.h
api_client/: IGeolocationProvider.h  IIPResolver.h  IpResolver.cpp  IpResolver.h  IpStackApiClient.cpp  IpStackApiClient.h  IpStackResponseParser.cpp  IpStackResponseParser.h
db/: IDataStorage.h  sqllitedatastorage.cpp  sqllitedatastorage.h
models/: ApiResponse.h  Geolocation.h  ItemListModel.h  schema.json
